# signaldb

./: .clinefile  .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.test  ICEBERG_IMPLEMENTATION.md  ICEBERG_NEXT_STEPS.md  KAFKA_PROTOCOL_TESTING.md  README.md  compose.yml  config.toml.dist  create_test_topic.py  debug_kafka.py  deny.toml  docker-compose.test.yml  next-steps.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  release-please-config.json  schemas.toml  signaldb.dev.toml  signaldb.dist.toml  signaldb.toml.example  test_kafka_metadata.py  test_kafka_protocol.py  test_simple_rdkafka.rs
src/acceptor/: CHANGELOG.md  Cargo.toml  README.md  test.parquet
src/acceptor/src/: discovery.rs  lib.rs  main.rs
src/acceptor/src/handler/: forward.rs  mod.rs  otlp_grpc.rs  otlp_log_handler.rs  otlp_metrics_handler.rs  otlp_profiles_handler.rs  prometheus_handler.rs  wal_manager.rs  wal_retry.rs
src/acceptor/src/middleware/: auth.rs  grpc_auth.rs  mod.rs
src/acceptor/src/services/: flight.rs  mod.rs  otlp_log_service.rs  otlp_metric_service.rs  otlp_profile_service.rs  otlp_trace_service.rs
src/common/: CHANGELOG.md  Cargo.toml  README.md
src/common/src/: catalog.rs  catalog_manager.rs  cli.rs  dataset.rs  discovery.rs  lib.rs  ratelimit.rs  service_bootstrap.rs  storage.rs  storage_usage.rs  tenant_api.rs
src/common/src/auth/: authenticator.rs  middleware.rs  mod.rs  validation.rs
src/common/src/config/: mod.rs
src/common/src/discovery/: mod.rs  nats.rs
src/common/src/flight/: auth.rs  conversion.rs  integration_tests.rs  mod.rs  schema.rs  trace_context.rs  transport.rs
src/common/src/iceberg/: catalog.rs  mod.rs  names.rs  schemas.rs  table_manager.rs
src/common/src/model/: mod.rs  profile.rs  schema.rs  span.rs  trace.rs
src/common/src/persistence/: mod.rs
src/common/src/profile/: aggregation.rs  mod.rs
src/common/tests/: catalog_integration.rs  catalog_sqlite_tests.rs  iceberg_integration.rs  schema_integration.rs  service_discovery_nats.rs
src/compactor/: CHANGELOG.md  Cargo.toml  README.md
src/compactor/src/: commit.rs  executor.rs  flight.rs  http.rs  lib.rs  main.rs  metrics.rs  planner.rs  rewriter.rs
src/grafana-plugin/backend/: Cargo.toml
src/heraclitus/: Cargo.toml  Dockerfile  KAFKA_API_KEYS.md  KAFKA_PROTOCOL_SPEC.md  README.md  heraclitus.docker.toml  heraclitus.toml
src/heraclitus-tests-integration/: Cargo.toml  README.md
src/heraclitus-tests-integration/src/: lib.rs
src/heraclitus-tests-integration/tests/: api_versions_test.rs  compression_e2e_test.rs  compression_integration_test.rs  find_coordinator_test.rs  kafka_client_test.rs  leave_group_test.rs  list_offsets_integration_test.rs  minio_integration.rs  mod.rs  offset_commit_test.rs  simple_rdkafka_test.rs
src/heraclitus/benches/: kafka_protocol_bench.rs
src/heraclitus/docs/: COMPRESSION.md
src/heraclitus/examples/: rdkafka_full_test.rs  rdkafka_minimal_test.rs  rdkafka_simple.rs
src/heraclitus/scripts/: build-docker.sh
src/heraclitus/src/: config.rs  error.rs  lib.rs  main.rs  partitioning.rs
src/heraclitus/tests/: README.md  auth_test.rs  compression_test.rs  create_topics_test.rs  delete_topics_test.rs  describe_groups_test.rs  fetch_api_test.rs  init_producer_id_test.rs  kafka_protocol_test.rs  list_groups_test.rs  list_offsets_test.rs  metadata_v10_test.rs  mod.rs  protocol_comparison.rs  protocol_comparison_container.rs  protocol_comparison_direct.rs  rdkafka_container_test.rs  rdkafka_integration_test.rs  rdkafka_produce_demo.rs  rdkafka_simple_demo.rs  shutdown_test.rs  simple_produce_test.rs  subprocess.rs  testcontainers_heraclitus.rs
src/messaging/: Cargo.toml  README.md
src/messaging/examples/: example.rs
src/messaging/src/: config.rs  lib.rs
src/querier/: CHANGELOG.md  Cargo.toml  README.md
src/querier/src/: flight.rs  lib.rs  main.rs  queue_handler.rs  tempo_endpoints.rs
src/router/: CHANGELOG.md  Cargo.toml  README.md
src/router/src/: discovery.rs  lib.rs  main.rs
src/signal-producer/: CHANGELOG.md  Cargo.toml  README.md
src/signal-producer/src/: main.rs
src/signaldb-bin/: CHANGELOG.md  Cargo.toml
src/signaldb-bin/src/: main.rs
src/signaldb-cli/: Cargo.toml
src/signaldb-cli/src/: main.rs
src/tempo-api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
src/tempo-api/proto/: .gitignore  tempo.proto
src/tempo-api/src/: lib.rs  v2.rs
src/writer/: CHANGELOG.md  Cargo.toml  Criterion.toml  README.md  run_benchmarks.sh
src/writer/benches/: connection_pool_benchmarks.rs  iceberg_benchmarks.rs
src/writer/src/: catalog.rs  flight.rs  flight_iceberg.rs  lib.rs  main.rs  processor.rs  schema_bridge.rs  schema_transform.rs  storage.rs
src/writer/tests/: iceberg_integration.rs  mod.rs  test_batch_optimization.rs  test_connection_pooling.rs  test_e2e_simple.rs  test_retry_logic.rs  test_sql_insert.rs  test_temp_table_cleanup.rs  test_transactions.rs  writer_flight_integration.rs
tests-integration/: Cargo.toml
tests-integration/src/: lib.rs  test_helpers.rs
tests-integration/src/fixtures/: catalog_context.rs  mod.rs  retention_context.rs  storage_context.rs
tests-integration/src/generators/: data_generator.rs  mod.rs  snapshot_generator.rs
tests-integration/tests/: end_to_end_logs_metrics_tests.rs  logql_queries.rs  prometheus_remote_write_test.rs  promql_queries.rs  router_tempo_endpoints.rs  self_monitoring.rs  storage_quota.rs
tests-integration/tests/compactor/: basic_compaction.rs  concurrent_writes.rs  logs_compaction.rs  metrics_compaction.rs  multi_instance.rs  orphan_cleanup.rs  partition_drop.rs  retention_cutoff.rs  retention_failure_scenarios.rs  snapshot_expiration.rs
tests-integration/tests/e2e/: component_integration_tests.rs  end_to_end_logs_metrics_tests.rs  end_to_end_trace_tests.rs  flight_rpc_tests.rs
tests-integration/tests/writer/: iceberg_integration.rs  test_sql_insert.rs  test_temp_table_cleanup.rs  wal_replay_idempotency.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+469 files in other folders)
