# Virtual workspace - no root package
[workspace]
resolver = "2"
members = [
    "src/acceptor",
    "src/common",
    "src/querier",
    "src/router",
    "src/signal-producer",
    "src/signaldb-bin",
    "src/tempo-api",
    "src/writer",
    "tests-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
rust-version = "1.86.0"

[workspace.dependencies]
acceptor = { path = "src/acceptor", features = ["testing"] }
common = { path = "src/common" }
tempo-api = { path = "src/tempo-api" }
writer = { path = "src/writer" }

async-trait = "0.1.88"
async-stream = "0.3.0"
futures = "0.3.31"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# DataFusion for workspace members
datafusion = { version = "47.0.0", default-features = false, features = [
    "parquet",
] }
# Direct Arrow and Parquet dependencies
arrow = { version = "55.2.0", features = ["prettyprint"] }
parquet = { version = "55.2.0", features = ["arrow", "async"] }
arrow-flight = { version = "55.2.0" }
object_store = { version = "0.12.4", features = ["aws"] }

# Apache Iceberg support (for schema management)
iceberg = { version = "0.5.1" }
iceberg-catalog-memory = { version = "0.5.1" }
# JanKaul's datafusion_iceberg (for write operations only)
datafusion_iceberg = { version = "0.8.0" }
iceberg-rust = { version = "0.8.0" }
iceberg-sql-catalog = { version = "0.8.0" }

tonic = { version = "0.12.3", features = [
    "transport",
    "channel",
    "codegen",
    "prost",
] }
tonic-build = "0.12.3"
tonic-reflection = "0.12.3"

opentelemetry = "0.29.1"
opentelemetry_sdk = "0.29.0"
opentelemetry-stdout = { version = "0.29.0" }
opentelemetry-otlp = { version = "0.29.0" }
opentelemetry-proto = "0.29.0"
opentelemetry-semantic-conventions = "0.29.0"

tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "sync",
    "time",
    "macros",
    "signal",
    "io-util",
] }
tokio-stream = { version = "0.1.17", features = ["sync", "net"] }
tokio-test = "0.4.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

log = "0.4"
anyhow = "1.0.98"

# Use the same axum version that tonic depends on
axum = "0.7.9"
tower-http = "0.6.6"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3"


prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"

thiserror = "2.0.12"

figment = { version = "0.10.19", features = ["toml", "env"] }
once_cell = "1.21.1"

bytes = "1"

uuid = { version = "1.17.0", features = ["serde", "v4"] }

humantime-serde = "1.1.1"

hex = "0.4"
env_logger = "0.11.5"
tower = "0.5.2"

testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13", features = ["postgres", "kafka"] }
tempfile = "3.20.0"
rand = "0.9"


# Dev dependencies
pretty_assertions = "1.4"
rdkafka = { version = "0.36", features = ["tokio"] }

criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
url = "2.5"
cargo-husky = { version = "1", default-features = false, features = [
    "precommit-hook",
    "run-cargo-fmt",
    "run-cargo-clippy",
] }
toml = "0.8"

# AWS SDK dependencies
aws-config = "1.5.10"
aws-sdk-s3 = "1.61.0"
aws-credential-types = "1.2.7"

[profile.dev]
split-debuginfo = "unpacked"
