# Virtual workspace - no root package
[workspace]
resolver = "2"
members = [
    "src/acceptor",
    "src/common",
    "src/grafana-plugin/backend",
    "src/querier",
    "src/router",
    "src/signal-producer",
    "src/signaldb-api",
    "src/signaldb-bin",
    "src/signaldb-cli",
    "src/signaldb-sdk",
    "src/tempo-api",
    "src/writer",
    "tests-integration",
    "xtask",
]

default-members = [
    "src/acceptor",
    "src/common",
    "src/querier",
    "src/router",
    "src/signal-producer",
    "src/signaldb-api",
    "src/signaldb-bin",
    "src/signaldb-cli",
    "src/signaldb-sdk",
    "src/tempo-api",
    "src/writer",
    "tests-integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
rust-version = "1.88.0"

[workspace.dependencies]
acceptor = { path = "src/acceptor", features = ["testing"] }
common = { path = "src/common" }
signaldb-api = { path = "src/signaldb-api" }
signaldb-sdk = { path = "src/signaldb-sdk" }
tempo-api = { path = "src/tempo-api" }
writer = { path = "src/writer" }

async-trait = "0.1.88"
async-stream = "0.3.0"
futures = "0.3.31"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# DataFusion for workspace members
datafusion = { version = "51.0.0", default-features = false, features = [
    "parquet",
] }
# Direct Arrow and Parquet dependencies
arrow = { version = "57.0.0", features = ["prettyprint"] }
parquet = { version = "57.0.0", features = ["arrow", "async"] }
arrow-flight = { version = "57.0.0" }
object_store = { version = "0.12.4", features = ["aws"] }

# Iceberg table format support (schema, catalog, and write operations)
datafusion_iceberg = { git = "https://github.com/JanKaul/iceberg-rust", rev = "31d6d911" }
iceberg-rust = { git = "https://github.com/JanKaul/iceberg-rust", rev = "31d6d911" }
iceberg-sql-catalog = { git = "https://github.com/JanKaul/iceberg-rust", rev = "31d6d911" }

tonic = { version = "0.14.2", features = ["transport", "channel"] }
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
tonic-reflection = "0.14.2"

opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-stdout = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.31.0" }
opentelemetry-proto = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"

tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "sync",
    "time",
    "macros",
    "signal",
    "io-util",
] }
tokio-stream = { version = "0.1.17", features = ["sync", "net"] }
tokio-test = "0.4.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

log = "0.4"
anyhow = "1.0.100"

# Use the same axum version that tonic depends on
axum = "0.8.8"
tower-http = "0.6.6"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
bincode = "1.3.3"


prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"

# Snappy compression for Prometheus remote write
snap = "1.1"

thiserror = "2.0.12"

reqwest = { version = "0.12", features = ["json"] }
progenitor-client = "0.11.2"

figment = { version = "0.10.19", features = ["toml", "env"] }
once_cell = "1.21.1"

bytes = "1"

uuid = { version = "1.18.1", features = ["serde", "v4"] }

humantime-serde = "1.1.1"

hex = "0.4"
env_logger = "0.11.5"
tower = "0.5.2"

testcontainers = { version = "0.26.3", features = ["blocking"] }
testcontainers-modules = { version = "0.14", features = ["postgres", "kafka", "minio"] }
tempfile = "3.20.0"
rand = "0.9"


# Dev dependencies
pretty_assertions = "1.4"
rdkafka = { version = "0.36", features = ["tokio"] }

criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }

chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
    "uuid",
] }
url = "2.5"
cargo-husky = { version = "1", default-features = false, features = [
    "precommit-hook",
    "run-cargo-fmt",
    "run-cargo-clippy",
] }
toml = "0.9"

# AWS SDK dependencies
aws-config = "1.5.10"
aws-sdk-s3 = "1.120.0"
aws-credential-types = "1.2.7"


# ------------------------------------------------------------
# Profiles
# ------------------------------------------------------------

# Fast local dev, good incremental behavior
[profile.dev]
incremental = true
debug = 1
split-debuginfo = "packed" # macOS only; ignored elsewhere
codegen-units = 16
opt-level = 0

# Tests inherit dev to maximize reuse of compiled deps
[profile.test]
inherits = "dev"

# Production / benchmarks
[profile.release]
opt-level = 3
lto = "thin"      # ~95% perf at much faster link times
codegen-units = 8
panic = "abort"
debug = 0
strip = "symbols"

# CI-optimized tests (fast linking, small artifacts)
[profile.ci-test]
inherits = "test"
debug = 0
strip = true
incremental = false
