[package]
name = "tests-integration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "tests_integration"
path = "src/lib.rs"

[dependencies]
# Workspace crates
acceptor = { path = "../src/acceptor" }
common = { path = "../src/common" }
compactor = { path = "../src/compactor" }
querier = { path = "../src/querier" }
router = { path = "../src/router" }
writer = { path = "../src/writer" }
tempo-api = { path = "../src/tempo-api" }

# External dependencies
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
datafusion.workspace = true
arrow-flight.workspace = true
object_store.workspace = true
tonic.workspace = true
log.workspace = true
tempfile.workspace = true
futures.workspace = true
opentelemetry-proto.workspace = true
axum.workspace = true
tower.workspace = true
serde_json.workspace = true
hex.workspace = true
prost.workspace = true
snap.workspace = true
chrono.workspace = true

# Iceberg catalog for integration tests
iceberg-rust.workspace = true

# For test-specific utilities
env_logger.workspace = true
url.workspace = true
testcontainers-modules.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-credential-types.workspace = true

[[test]]
name = "iceberg_integration"
path = "tests/writer/iceberg_integration.rs"

[[test]]
name = "flight_rpc_tests"
path = "tests/e2e/flight_rpc_tests.rs"

[[test]]
name = "prometheus_remote_write_test"
path = "tests/prometheus_remote_write_test.rs"

[[test]]
name = "basic_compaction"
path = "tests/compactor/basic_compaction.rs"

[[test]]
name = "concurrent_writes"
path = "tests/compactor/concurrent_writes.rs"

[package.metadata.cargo-machete]
# These dependencies are used in integration tests under tests/ directory
ignored = ["acceptor", "anyhow", "arrow-flight", "compactor", "datafusion", "futures", "iceberg-rust", "log", "opentelemetry-proto", "querier", "router", "tokio", "tokio-stream", "tonic", "writer"]