[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
progenitor = "0.14.0"
typify = "0.7.0"
openapiv3 = "2.2.0"
# Must stay on 0.8: typify 0.7 / progenitor 0.14 take schemars ^0.8 types in their APIs
schemars = "0.8"
serde_json.workspace = true
serde_yaml = "0.9"
prettyplease = "0.3"
syn = "2"
anyhow.workspace = true
clap.workspace = true
