[package]
name = "acceptor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
testing = []

[dependencies]
common.workspace = true

datafusion.workspace = true
arrow-flight.workspace = true

opentelemetry-proto.workspace = true
tonic.workspace = true

tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true

log.workspace = true
anyhow.workspace = true

axum.workspace = true

serde_json.workspace = true

opentelemetry.workspace = true
async-trait.workspace = true


[[bin]]
name = "signaldb-acceptor"
path = "src/main.rs"

[dev-dependencies]
mockall.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing", "opentelemetry", "mockall"]
