[package]
name = "acceptor"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[features]
jemalloc-profiling = ["common/jemalloc-profiling", "dep:tikv-jemallocator"]
testing = []

[dependencies]
tikv-jemallocator = { workspace = true, optional = true }
common.workspace = true
prost.workspace = true

datafusion.workspace = true
arrow-flight.workspace = true

opentelemetry-proto.workspace = true
tonic.workspace = true

tracing.workspace = true
tokio.workspace = true
futures.workspace = true

log.workspace = true
anyhow.workspace = true

clap.workspace = true
axum.workspace = true

serde_json.workspace = true

opentelemetry.workspace = true
async-trait.workspace = true
bytes.workspace = true


[[bin]]
name = "signaldb-acceptor"
path = "src/main.rs"

[dev-dependencies]
tower.workspace = true
tempfile.workspace = true

[package.metadata.cargo-machete]
ignored = ["tracing", "opentelemetry"]
