[package]
name = "common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log.workspace = true
anyhow.workspace = true
tempo-api = { path = "../tempo-api" }

datafusion.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
opentelemetry.workspace = true
opentelemetry-proto.workspace = true
async-trait.workspace = true

clap.workspace = true
figment.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
once_cell.workspace = true
tokio.workspace = true

humantime-serde.workspace = true

sqlx.workspace = true
uuid.workspace = true
chrono = { workspace = true }

arrow-flight.workspace = true
tonic.workspace = true

iceberg.workspace = true
iceberg-catalog-memory.workspace = true

# JanKaul's iceberg-rust implementation
iceberg-rust.workspace = true
iceberg-sql-catalog.workspace = true

object_store.workspace = true
url.workspace = true
toml.workspace = true

[dev-dependencies]
testcontainers-modules.workspace = true
testcontainers = { workspace = true, features = ["blocking"] }
tempfile.workspace = true
figment = { workspace = true, features = ["test"] }

[package.metadata.cargo-machete]
# async-trait is used by discovery backends
ignored = ["async-trait", "humantime-serde", "testcontainers"]
