[package]
name = "compactor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
iceberg-rust.workspace = true
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true

# Phase 2 dependencies
datafusion.workspace = true
datafusion_iceberg.workspace = true
object_store.workspace = true
serde.workspace = true
uuid.workspace = true
writer.workspace = true

# Phase 3 dependencies (retention management)
chrono.workspace = true
chrono-tz = "0.10"
humantime = "2.1"
humantime-serde = "1.1"
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "signaldb-compactor"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = [
    # iceberg-rust pulls in these as transitive dependencies
    "async-trait",
    "serde",
    # humantime-serde used in serde attributes
    "humantime-serde"
]
