[package]
name = "compactor"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
common.workspace = true
iceberg-rust.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
clap.workspace = true

# Phase 2 dependencies
datafusion.workspace = true
datafusion_iceberg.workspace = true
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# Phase 3 dependencies (retention management)
chrono.workspace = true
chrono-tz = "0.10"
humantime = "2.1"
humantime-serde = "1.1"
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Phase 4 dependencies (multi-instance safety + Flight endpoints)
arrow-flight.workspace = true
bytes.workspace = true
futures.workspace = true
tonic.workspace = true

# Phase 6 dependencies (observability HTTP endpoints)
axum.workspace = true

[[bin]]
name = "signaldb-compactor"
path = "src/main.rs"

