[package]
name = "heraclitus-tests-integration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Our crates
heraclitus = { path = "../heraclitus" }

# Test infrastructure
testcontainers-modules = { workspace = true, features = ["minio"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }

# Kafka client for testing
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Other test dependencies
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono = { workspace = true }

[dev-dependencies]