[package]
name = "heraclitus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "heraclitus"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# For atomic operations on object storage
parking_lot = "0.12"

# For compression support
flate2 = "1.0"          # Gzip compression
snap = "1.1"            # Snappy compression
lz4 = "1.24"            # LZ4 compression
zstd = "0.13"           # Zstandard compression

# For CRC32C checksums in Kafka protocol
crc32c = "0.6"

# For HTTP server and metrics
axum = { workspace = true }
prometheus = { version = "0.14", features = ["process"] }

# For async trait definitions
async-trait = "0.1"

# For configuration
toml = { version = "0.8", features = ["preserve_order"] }

# For logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



# For socket optimization
socket2 = "0.5"

# For partitioning
rand = "0.8"

[dev-dependencies]
tempfile = "3.0"
rdkafka = { version = "0.36", features = ["tokio"] }

