[package]
name = "heraclitus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "heraclitus"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# For atomic operations on object storage
parking_lot = { workspace = true }

# For compression support
flate2 = { workspace = true } # Gzip compression
snap = { workspace = true }   # Snappy compression
lz4 = { workspace = true }    # LZ4 compression
zstd = { workspace = true }   # Zstandard compression

# For CRC32C checksums in Kafka protocol
crc32c = { workspace = true }

# For HTTP server and metrics
axum = { workspace = true }
prometheus = { workspace = true }

# For async trait definitions
async-trait = { workspace = true }

# For configuration
toml = { workspace = true }

# For logging
tracing-subscriber = { workspace = true }

# For socket optimization
socket2 = { workspace = true }

# For partitioning
rand = { workspace = true }

# For Kafka protocol implementation
kafka-protocol = { version = "0.15.1", features = ["messages_enums"] }

[dev-dependencies]
rdkafka = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
