[package]
name = "heraclitus"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "heraclitus"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
futures = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# For atomic operations on object storage
parking_lot = { workspace = true }

# For HTTP server and metrics
axum = { workspace = true }
prometheus = { workspace = true }


# For configuration
toml = { workspace = true }

# For logging
tracing-subscriber = { workspace = true }


# For partitioning
rand = { workspace = true }

# For Kafka protocol implementation
kafka-protocol = { version = "0.16", features = ["messages_enums", "broker", "gzip", "zstd", "snappy", "lz4"] }

[dev-dependencies]
rdkafka = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "kafka_protocol_bench"
harness = false
