[package]
name = "messaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true

async-nats.workspace = true
tokio.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
testcontainers-modules.workspace = true
ntest.workspace = true
