[package]
name = "messaging"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true

async-nats.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true

arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true

[dev-dependencies]
testcontainers-modules.workspace = true
ntest.workspace = true
