[package]
name = "messaging"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true

async-nats.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

serde.workspace = true
serde_json.workspace = true

arrow.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true

[dev-dependencies]
testcontainers-modules.workspace = true
ntest.workspace = true
