[package]
name = "querier"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tikv-jemallocator = { workspace = true, optional = true }
common = { path = "../common" }
tempo-api = { path = "../tempo-api", features = ["server"] }

async-trait.workspace = true
dashmap.workspace = true
hex.workspace = true

anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
log.workspace = true
datafusion.workspace = true
tracing.workspace = true
opentelemetry.workspace = true
tonic.workspace = true
arrow-flight.workspace = true
object_store.workspace = true
futures.workspace = true
bytes.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
iceberg-rust.workspace = true
datafusion_iceberg.workspace = true

thiserror.workspace = true

# PromQL support

[[bin]]
name = "signaldb-querier"
path = "src/main.rs"

[features]
jemalloc-profiling = ["common/jemalloc-profiling", "dep:tikv-jemallocator"]
