[package]
name = "router"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
common.workspace = true
signaldb-api.workspace = true
tempo-api.workspace = true
arrow-flight.workspace = true
datafusion.workspace = true

futures.workspace = true
tonic.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true

log.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true

[[bin]]
name = "signaldb-router"
path = "src/main.rs"

[dev-dependencies]
tokio-test.workspace = true
tower.workspace = true

[package.metadata.cargo-machete]
ignored = ["tokio-test"]
