[package]
name = "router"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tikv-jemallocator = { workspace = true, optional = true }
common.workspace = true
signaldb-api.workspace = true
logql.workspace = true
loki-api.workspace = true
pyroscope-api.workspace = true
tempo-api.workspace = true
arrow-flight.workspace = true
datafusion.workspace = true

futures.workspace = true
tonic.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
bytes.workspace = true
uuid.workspace = true
chrono.workspace = true

log.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "signaldb-router"
path = "src/main.rs"

[dev-dependencies]
tokio-test.workspace = true
tower.workspace = true

[package.metadata.cargo-machete]
ignored = ["tokio-test"]

[features]
jemalloc-profiling = ["common/jemalloc-profiling", "dep:tikv-jemallocator"]
