[package]
name = "signal-producer"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }

opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["async-std", "trace"] }
opentelemetry-stdout = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, features = ["tonic"] }
opentelemetry-semantic-conventions.workspace = true
