[package]
name = "signal-producer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }

opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry-semantic-conventions.workspace = true
