[package]
name = "signal-producer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true

clap.workspace = true
rand.workspace = true
tracing-subscriber.workspace = true

opentelemetry = { workspace = true, features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions.workspace = true
